Closed Bug 253798 Opened 21 years ago Closed 21 years ago

Compose type widget catches events when alt is depressed

Categories

(MailNews Core :: Composition, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: neil)

References

()

Details

Attachments

(2 files)

wXP 2004072808 steps: 1. create a new message 2. focus the address line 3. press shift-tab 3' focus is on the widget currently showing 'To:' 4. press b 4' widget changes to show 'Bcc:' 5. press alt-r 5' focus changes to the From: field 5` the widget also changed to show 'Reply-To:' 6. repeat steps 2-4 7. press alt-t 7' the tools menu opens 7` the widget also changed to show 'To:' steps labeled w/ ' are expected steps labeled w/ ` (5` and 7`) are additional actual results that should not happen
If you thought that was bad, try shift+tab,alt+{down,r,down} When I originally wrote the menulist keyboard selection code I thought that it was only alt+up/down that I had to be careful of :-[
This uses GetPreventDefault() to detect the open/close key combos, and IsAccessKeyPressed to detect the menu access key modifier.
Comment on attachment 154852 [details] [diff] [review] Filter alt at the C++ level I've decided that I prefer this patch, but you could consider the other patch or the JS caller could perform the test if you prefer.
Attachment #154852 - Flags: superreview?(roc)
Attachment #154852 - Flags: review?(roc)
I prefer patch 154689. Why do you prefer the original patch?
(In reply to comment #5) >I prefer patch 154689. Why do you prefer the original patch? I think I thought that attachment 154689 [details] [diff] [review] was trying to be too clever.
I think 154689 is more general and therefore to be preferred. 154852 doesn't handle Ctrl and other possibilities.
Attachment #154852 - Flags: superreview?(roc)
Attachment #154852 - Flags: superreview-
Attachment #154852 - Flags: review?(roc)
Attachment #154852 - Flags: review-
Comment on attachment 154869 [details] [diff] [review] Alternative C++ approach Let's do this, assuming you've smoketested it.
Attachment #154869 - Flags: superreview+
Attachment #154869 - Flags: review+
Fix checked in.
Really marking fixed...
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: