Bug 253798 General or menu access keys should not affect xul menulists r+sr=roc